# Quotes_django_project

./: pyproject.toml
quotes_site/: manage.py
quotes_site/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
quotes_site/quotes/migrations/: 0001_initial.py  0002_alter_author_born_location.py  0003_rename_tegs_quote_tags.py  0004_alter_quote_tags.py  0005_alter_author_id.py
quotes_site/quotes/static/quotes/: style.css
quotes_site/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
quotes_site/quotes/templatetags/: extract.py
quotes_site/quotes_site/: asgi.py  settings.py  urls.py  wsgi.py
quotes_site/users/: forms.py  urls.py  views.py
quotes_site/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  signup.html
quotes_site/utils/: from_mongo_to_postgres.py  from_mongo_to_postgres2.py
